--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -4,6 +4,7 @@
     padding: 15px;
     border-bottom: 1px solid black;
     font-size: 16px;
+    font-weight: bold;
     align-items: center;
 }
 
