--- a/src/components/common-page-components/PageHeader/PageHeader.css
+++ b/src/components/common-page-components/PageHeader/PageHeader.css
@@ -16,11 +16,12 @@
 }
 
 .login-signup-link {
+    font-weight: normal;
     border-radius: 10px;
     text-decoration: none;
     color: inherit;
     padding: 5px 20px;
-    border: 2px solid black;
+    border: 1px solid black;
     transition: 0.2s;
     margin-left: 10px;
 }
@@ -32,5 +33,5 @@
 .login-signup-link:hover {
     background-color: mediumseagreen;
     color: white;
-    border: 2px solid white;
+    border: 1px solid white;
 }
