--- a/src/components/common-page-components/FileCell/FileCell.css
+++ b/src/components/common-page-components/FileCell/FileCell.css
@@ -29,7 +29,12 @@
     font-weight: bold;
 }
 
-.file-role {
-    padding-left: 10px;
-    font-size: 12px;
+.file-selected {
+    color: white;
+    background-color: #b0b0b0;;
+}
+
+.file-selected:hover {
+    background-color: indianred;
+    cursor: pointer;
 }
