implemented update perms of existing user

--- a/src/components/common-page-components/FileInfoSideBar/FileInfoBlock/FileInfoBlock.css
+++ b/src/components/common-page-components/FileInfoSideBar/FileInfoBlock/FileInfoBlock.css
@@ -13,6 +13,10 @@
     font-weight: bold;
 }
 
+.file-info-name:hover {
+    cursor: pointer;
+}
+
 .file-info-name svg {
     color: white;
 }
@@ -27,4 +31,26 @@
 .files-permissions-list {
     border: 1px solid #adadad;
     border-radius: 5px;
+}
+
+.update-access-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+
+.update-access-button {
+    border: none;
+    border-radius: 5px;
+    background-color: cornflowerblue;
+    color: white;
+    font-weight: bold;
+    padding: 10px;
+    transition: 0.2s;
+}
+
+.update-access-button:hover {
+    cursor: pointer;
+    background-color: royalblue;
 }
