--- a/src/components/pages/index.css
+++ b/src/components/pages/index.css
@@ -106,6 +106,14 @@
     font-weight: bold;
 }
 
+.page-content-all-the-way {
+    width: 480%;
+    background-color: #d9d9d9;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .category-title {
     font-size: 16px;
 }
