--- a/src/components/modals/RecentSearchModal/RecentSearchModal.css
+++ b/src/components/modals/RecentSearchModal/RecentSearchModal.css
@@ -10,11 +10,11 @@
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.modal-container {
+.recent-modal-container {
     width: 50%;
     min-width: 450px;
     max-width: 550px;
-    height: 300px;
+    height: 340px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 3px 10px 0 #2a2a2a;
