--- a/src/components/common-page-components/FileInfoSideBar/FileInfoSideBar.css
+++ b/src/components/common-page-components/FileInfoSideBar/FileInfoSideBar.css
@@ -22,3 +22,27 @@
 .sidebar-close-button:hover {
     cursor: pointer;
 }
+
+.sidebar-update-all-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 2px solid #adadad;
+}
+
+.sidebar-update-all-button {
+    border: none;
+    border-radius: 5px;
+    background-color: cornflowerblue;
+    color: white;
+    font-weight: bold;
+    padding: 10px;
+    transition: 0.2s;
+    margin: auto;
+}
+
+.sidebar-update-all-button:hover {
+    cursor: pointer;
+    background-color: royalblue;
+}
