--- a/src/components/modals/index.css
+++ b/src/components/modals/index.css
@@ -45,3 +45,75 @@
     padding: 5px 10px;
     background-color: #adadad;
 }
+
+.modal-form {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-form-input {
+    position: relative;
+    font-size: 16px;
+    border: 1px solid dimgrey;
+    border-radius: 5px;
+    padding: 5px;
+    width: 95%;
+    margin: 10px auto;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+.modal-button {
+    padding: 10px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    background-color: white;
+    transition: 0.15s;
+}
+
+.modal-button:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.modal-confirm {
+    border: 2px solid cornflowerblue;
+}
+
+.modal-confirm:hover {
+    background-color: cornflowerblue;
+}
+
+.modal-cancel {
+    border: 2px solid white;
+}
+
+.modal-cancel:hover {
+    background-color: indianred;
+}
+
+.modal-add-text-button {
+    position: absolute;
+    right: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    height: 31px;
+    padding: 5px 10px;
+    background: none;
+    border: none;
+    border-left: 1px solid black;
+}
+
+.modal-add-text-button:hover {
+    cursor: pointer;
+}
