--- a/src/components/modals/index.css
+++ b/src/components/modals/index.css
@@ -18,7 +18,6 @@
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 3px 10px 0 #2a2a2a;
-    overflow-y: auto;
 }
 
 .modal-header {
@@ -37,6 +36,7 @@
 }
 
 .modal-section {
+    width: 100%;
     margin-bottom: 15px;
 }
 
