--- a/src/components/common-page-components/PageHeader/SearchBar/SearchBar.css
+++ b/src/components/common-page-components/PageHeader/SearchBar/SearchBar.css
@@ -1,78 +1,26 @@
-.profile-dropdown-container {
-    margin-left: 10px;
-    position: relative;
+.header-center-content-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.snapshot-button {
-    transition: 0.1s;
+.search-bar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
-.snapshot-button:hover {
-    cursor: pointer;
-    color: cornflowerblue;
+.header-search-bar {
+    font-size: 16px;
+    padding: 5px 5px 5px 40px;
 }
 
-.user-dropdown {
-    list-style-type: none;
-    margin: 0;
+.search-button {
     position: absolute;
-    top: 40px;
-    right: 0;
-    display: none;
-    box-shadow: 0 3px 5px 0 #646464;
-    background-color: white;
-    border-radius: 5px;
-    padding: 5px;
-    border: 1px solid #646464;
-}
-
-.user-dropdown:after,
-.user-dropdown:before {
-    bottom: 100%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-}
-
-.user-dropdown:after {
-    border-color: rgba(255, 255, 255, 0);
-    border-bottom-color: #ffffff;
-    border-width: 8px;
-    left: 82%;
-    margin-left: -8px;
-}
-
-.user-dropdown:before {
-    border-color: rgba(113, 158, 206, 0);
-    border-bottom-color: #646464;
-    border-width: 9px;
-    left: 82%;
-    margin-left: -9px;
-}
-
-.user-dropdown-open {
-    display: block;
-}
-
-.user-menu-item {
-    border-radius: 5px;
-    transition: 0.2s;
-    padding: 10px;
-}
-
-.user-menu-item:hover {
-    cursor: pointer;
-    background-color: slategray;
-    color: white;
-}
-
-.search-button{
+    left: 0;
+    padding-left: 5px;
     transition: 0.1s;
-    margin-left: 5px;
 }
 
 .search-button:hover {
@@ -80,12 +28,48 @@
     color: cornflowerblue;
 }
 
-.forQuery{
-    background-color: white;
-    width: 100%;
+.search-filter-button {
+    padding: 6px;
+    border: 1px solid black;
 }
 
-.forQuery:hover{
-    background-color: lightblue;
-    transition: 0.3s;
+.search-filter-button:hover {
+    cursor: pointer;
+}
+
+.snapshot-selection-container {
+    margin-left: 20px;
+    position: relative;
+    display: flex;
+}
+
+.snapshot-icon {
+    margin-right: 5px;
+    transition: 0.2s;
+}
+
+.search-dropdown {
+    margin: auto;
+    position: absolute;
+    top: 54px;
+    display: none;
+    background-color: white;
+    border-radius: 0 0 5px 5px ;
+    border: 1px solid black;
+}
+
+.search-dropdown-open {
+    display: block;
+}
+
+.search-menu-item {
+    border-radius: 5px;
+    transition: 0.2s;
+    padding: 10px;
+}
+
+.search-menu-item:hover {
+    cursor: pointer;
+    background-color: slategray;
+    color: white;
 }
