--- a/src/components/pages/QueryBuilder/QueryBuilder.css
+++ b/src/components/pages/QueryBuilder/QueryBuilder.css
@@ -6,12 +6,9 @@
 }
 
 .dataResult{
-    margin-top: 5px;
-    width: 100%;
-    height: 500px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 50px;
-    overflow: hidden;
+    padding: 5px;
+    width: 600px;
+    height: 300px;
     overflow-y: auto;
 }
 
@@ -36,8 +33,6 @@ a{
 
 .listOfButtons{
     font-size: 15px;
-    background-color: white;
-    margin-left: 40%;
     margin-top: 5%;
 }
 
