--- a/src/components/pages/SearchResults/SearchResults.css
+++ b/src/components/pages/SearchResults/SearchResults.css
@@ -6,6 +6,9 @@ th{
 
 table{
     width: 100%;
+    margin-left: 10%;
+    margin-left: auto;
+    margin-right: auto;
     border: 3px solid black;
 }
 
@@ -37,4 +40,11 @@ table{
     justify-content: center;
     align-items: center;
     margin: 10px;
+}
+
+.search-result-file-name{
+    width: 300px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
