added clarification msg to multiple sharing modal

--- a/src/components/modals/UpdateMultipleSharingModal/UpdateMultipleSharingModal.css
+++ b/src/components/modals/UpdateMultipleSharingModal/UpdateMultipleSharingModal.css
@@ -11,3 +11,18 @@
     width: 280px;
     display: inline-block;
 }
+
+.multiple-sharing-note {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    margin-left: 10px;
+}
+
+.multiple-sharing-note div {
+    margin: 0 10px;
+}
+
+.multiple-sharing-modal-container {
+    height: 632px;
+}
