accounted for displaying group and anyone with link perm for files, added option for group and anyone with link perms for singular files

--- a/src/components/modals/index.css
+++ b/src/components/modals/index.css
@@ -53,6 +53,19 @@
     align-items: center;
 }
 
+.add-anyone-link {
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 10px;
+    margin-left: 20px;
+    position: relative;
+    right: 190px;
+}
+
+.add-anyone-link:hover {
+    cursor: pointer;
+}
+
 .modal-form-input {
     position: relative;
     font-size: 16px;
