added style for compare snapshot modal

--- a/src/components/modals/AnalyzeSharingModal/AnalyzeSharingInfoCell/AnalyzeSharingInfoCell.css
+++ b/src/components/modals/AnalyzeSharingModal/AnalyzeSharingInfoCell/AnalyzeSharingInfoCell.css
@@ -17,3 +17,8 @@
     font-size: 14px;
     border-bottom: 1px solid #adadad;
 }
+
+.snapshot-diff-block {
+    display: flex;
+    flex-direction: column;
+}
