--- a/src/components/common-page-components/PageHeader/SearchBar/QueryBuilder/QueryBuilder.css
+++ b/src/components/common-page-components/PageHeader/SearchBar/QueryBuilder/QueryBuilder.css
@@ -1,60 +1,111 @@
-.parentDiv{
-    margin-left: 15%;
-    margin-top: 10%;
-    width: 50%;
-    margin-right: 15%;
-}
-
-.dataResult{
-    padding: 5px;
+.query-builder-container {
+    font-size: 16px;
     width: 600px;
-    height: 300px;
     overflow-y: auto;
 }
 
-.dataResult ::-webkit-scrollbar{
+.query-builder-container ::-webkit-scrollbar{
     display: none;
 }
 
-.dataResult .dataItem{
-    width: 100px;
-    height: 50px;
+.query-builder-operations-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5px;
+}
+
+.query-builder-select {
+    font-size: 14px;
+    width: 45%;
+    padding: 5px;
+}
+
+.query-builder-form {
+    display: flex;
+    justify-content: flex-end;
     align-items: center;
-    color: black;
+    width: 45%;
 }
 
-.dataItem p{
-    margin-left: 10px;
+.query-builder-form-input {
+    border: 1px solid dimgrey;
+    width: 80%;
+    font-size: 12px;
+    right: 37px;
+    position: relative;
+    margin: 0;
+    padding: 7px;
+    border-radius: 2px;
 }
 
-a{
-    text-decoration: none;
-}
-
-.listOfButtons{
-    font-size: 15px;
-    margin-top: 5%;
+.query-builder-add-button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    border: 1px solid black;
+    font-size: 12px;
+    padding: 0 8px;
+    right: 20px;
     background-color: white;
-    margin-left: 40%;
-    text-align: left;
-    border: thick double #32a1ce;
+    border-radius: 0 2px 2px 0;
 }
 
-.executeButton{
-    font-size: 15px;
-    margin-top: 5%;
-    background-color: lightgray;
-    margin-left: 40%;
-    text-align: left;
-    border: thick double black;
+.query-builder-add-button:hover {
+    cursor: pointer;
 }
 
-.executeButton:hover{
-    background-color: lightblue;
-    transition: 0.3s;
+.query-operator-desc {
+    font-weight: normal;
+    font-size: 12px;
+    margin-left: 25px;
+    margin-top: 20px;
+    opacity: 0.6;
+    display: flex;
 }
 
-.listOfButtons:hover{
-    background-color: lightblue;
-    transition: 0.3s;
+.query-builder-footer {
+    margin: 10px 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.execute-query-button {
+    margin-right: 20px;
+    padding: 5px;
+    background-color: white;
+    border: 1px solid #adadad;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+
+.execute-query-button:hover {
+    cursor: pointer;
+    color: white;
+    background-color: cornflowerblue;
+    border: 1px solid white;
+}
+
+.query-tags-list {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin: 5px 20px;
+}
+
+.query-string-label {
+    margin-left: 25px;
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.query-string {
+    border: 1px solid #adadad;
+    border-radius: 5px;
+    width: 550px;
+    margin-left: 20px;
+    font-weight: normal;
+    font-size: 14px;
+    padding: 5px;
 }
