--- a/src/components/pages/SearchResults/SearchResultRowBlock/SearchResultRowBlock.css
+++ b/src/components/pages/SearchResults/SearchResultRowBlock/SearchResultRowBlock.css
@@ -40,3 +40,17 @@
     font-size: 14px;
     font-weight: bold;
 }
+
+.result-perm-note {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    margin-left: 10px;
+    font-weight: normal;
+    color: #2a2a2a;
+    padding: 5px;
+}
+
+.result-perm-note div {
+    padding-left: 10px;
+}
