display and update shared files

--- a/src/components/common-page-components/FileInfoSideBar/FileInfoSideBar.css
+++ b/src/components/common-page-components/FileInfoSideBar/FileInfoSideBar.css
@@ -2,6 +2,7 @@
     min-width: 400px;
     border-left: 2px solid black;
     border-right: 2px solid black;
+    min-height: 95vh;
 }
 
 .info-sidebar-header {
