update sharing modal to account for organizer roles

--- a/src/components/modals/UpdateSingleSharingModal/UpdateSingleSharingModal.css
+++ b/src/components/modals/UpdateSingleSharingModal/UpdateSingleSharingModal.css
@@ -10,6 +10,11 @@
     font-size: 14px;
 }
 
+.modal-user-role {
+    font-weight: bold;
+    font-size: 12px;
+}
+
 .modal-user-email {
     font-size: 12px;
 }
