--- a/src/components/pages/SearchResults/SearchResults.css
+++ b/src/components/pages/SearchResults/SearchResults.css
@@ -29,3 +29,15 @@
 .result-table-header .more-detail-button:hover {
     cursor: unset;
 }
+
+.search-result-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    padding: 5px 10px;
+}
+
+.search-result-sort {
+    font-size: 14px;
+    padding: 5px;
+}
