--- a/src/components/common-page-components/PageHeader/SearchBar/QueryBuilder/QueryBuilder.css
+++ b/src/components/common-page-components/PageHeader/SearchBar/QueryBuilder/QueryBuilder.css
@@ -66,9 +66,9 @@
 }
 
 .query-builder-footer {
-    margin: 10px 0;
+    margin: 10px 0 10px 20px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 .execute-query-button {
@@ -108,4 +108,8 @@
     font-weight: normal;
     font-size: 14px;
     padding: 5px;
+}
+
+.query-builder-acc-groups {
+
 }
