--- a/src/components/common-page-components/PageSidebar/LinkOneDriveLink/LinkOneDriveLink.css
+++ b/src/components/common-page-components/PageSidebar/LinkOneDriveLink/LinkOneDriveLink.css
@@ -1,4 +1,4 @@
-.onedrive-account {
+/* .onedrive-account {
     display: flex;
     align-items: center;
     font-size: 14px;
@@ -24,4 +24,4 @@
     cursor: pointer;
     color: white;
     background-color: mediumseagreen;
-}
+} */
